@startuml

title __UI's Class Diagram__\n

  namespace com.example.telecom.paris.maze.ui {
    abstract class com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton {
        + AbstractBoxTypeRadioButton()
        + actionPerformed()
        {abstract} + setBoxModelType()
        # setModified()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ArrivalBoxButton {
        + ArrivalBoxButton()
        + setBoxModelType()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.BoxMouseAdapter {
        + BoxMouseAdapter()
        + mousePressed()
        - getMazePanel()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.BoxPanel {
        - colIndex : int
        - rowIndex : int
        + BoxPanel()
        + getMaximumSize()
        + getMazeBox()
        + getMinimumSize()
        + getPreferredSize()
        + notifyForUpdate()
        + repaint()
        # getMazePanel()
        - getBoxColor()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ChooserButtonGroup {
        + ChooserButtonGroup()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ClearMazeMenuItem {
        + ClearMazeMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.ClearShortestPathButton {
        + ClearShortestPathButton()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.DepartureBoxButton {
        + DepartureBoxButton()
        + setBoxModelType()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.DrawingMenuBar {
        + DrawingMenuBar()
        + notifyForUpdate()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.EmptyBoxButton {
        + EmptyBoxButton()
        + setBoxModelType()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.FileMazePersistenceManager {
        - BOX_ARRIVAL : char
        - BOX_DEPARTURE : char
        - BOX_EMPTY : char
        - BOX_WALL : char
        - editor : Component
        - filter : FileNameExtensionFilter
        + FileMazePersistenceManager()
        + delete()
        + persist()
        + read()
        + setEditor()
        # doPersist()
        # doRead()
        - newMazeId()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.FileMenu {
        + FileMenu()
        + notifyForUpdate()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.InformationMazeMenuItem {
        + InformationMazeMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazeEditor {
        - editing : boolean
        - modified : boolean
        + MazeEditor()
        + getJMenuBar()
        + getMaze()
        + getPersistenceManager()
        + getRootPanel()
        + isModified()
        + modelStateChanged()
        + newMaze()
        + setModified()
        # close()
        # isEditing()
        # persistAsMaze()
        # persistMaze()
        # readMaze()
        # setEditing()
        # solveMaze()
        - doPersistMaze()
        - handleException()
        - handleModified()
        - setMaze()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazeMenu {
        + MazeMenu()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.MazePanel {
        - boxPanels : BoxPanel[][]
        + MazePanel()
        + getBox()
        + getBoxPanels()
        + getMinimumSize()
        + getSelectedBoxTypeButton()
        + notifyForUpdate()
        + setModified()
        + setSelectedBoxTypeButton()
        # computePreferredBoxSize()
        # isEditing()
        # setEditing()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.NewMazeMenuItem {
        + NewMazeMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.OpenFileMenuItem {
        {static} + height : int
        {static} + width : int
        - repertoireCourant : File
        + OpenFileMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.QuitMenuItem {
        + QuitMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.RootPanel {
        + RootPanel()
        + notifyForUpdate()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SaveAsMenuItem {
        - repertoireCourant : File
        + SaveAsMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SaveMenuItem {
        - repertoireCourant : File
        + SaveMenuItem()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.SolveMazeButton {
        + SolveMazeButton()
        + actionPerformed()
    }
  }
  

  namespace com.example.telecom.paris.maze.ui {
    class com.example.telecom.paris.maze.ui.WallBoxButton {
        + WallBoxButton()
        + setBoxModelType()
    }
  }
  

  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton -up-|> javax.swing.JRadioButton
  com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton o-- com.example.telecom.paris.maze.ui.MazePanel : mazePanel
  com.example.telecom.paris.maze.ui.ArrivalBoxButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ArrivalBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.BoxMouseAdapter -up-|> java.awt.event.MouseAdapter
  com.example.telecom.paris.maze.ui.BoxMouseAdapter o-- com.example.telecom.paris.maze.ui.BoxPanel : boxPanel
  com.example.telecom.paris.maze.ui.BoxPanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.BoxPanel o-- com.example.telecom.paris.maze.model.MazeModel : mazeModel
  com.example.telecom.paris.maze.ui.ChooserButtonGroup -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.ClearMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.ClearShortestPathButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.ClearShortestPathButton -up-|> javax.swing.JButton
  com.example.telecom.paris.maze.ui.ClearShortestPathButton o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.DepartureBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.DrawingMenuBar -up-|> javax.swing.JMenuBar
  com.example.telecom.paris.maze.ui.DrawingMenuBar o-- com.example.telecom.paris.maze.ui.FileMenu : fileMenu
  com.example.telecom.paris.maze.ui.EmptyBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton
  com.example.telecom.paris.maze.ui.FileMazePersistenceManager .up.|> com.example.telecom.paris.maze.model.MazePersistenceManager
  com.example.telecom.paris.maze.ui.FileMenu -up-|> javax.swing.JMenu
  com.example.telecom.paris.maze.ui.FileMenu o-- com.example.telecom.paris.maze.ui.SaveAsMenuItem : saveAsMenuItem
  com.example.telecom.paris.maze.ui.FileMenu o-- com.example.telecom.paris.maze.ui.SaveMenuItem : saveMenuItem
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.InformationMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.MazeEditor .up.|> com.example.telecom.paris.maze.model.ModelObserver
  com.example.telecom.paris.maze.ui.MazeEditor -up-|> javax.swing.JFrame
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.model.MazeModel : maze
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.model.MazePersistenceManager : persistenceManager
  com.example.telecom.paris.maze.ui.MazeEditor o-- com.example.telecom.paris.maze.ui.RootPanel : rootPanel
  com.example.telecom.paris.maze.ui.MazeMenu -up-|> javax.swing.JMenu
  com.example.telecom.paris.maze.ui.MazePanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.MazePanel o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.MazePanel o-- com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton : selectedBoxTypeButton
  com.example.telecom.paris.maze.ui.NewMazeMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.NewMazeMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.NewMazeMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.OpenFileMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.OpenFileMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.OpenFileMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.QuitMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.QuitMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.QuitMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.RootPanel -up-|> javax.swing.JPanel
  com.example.telecom.paris.maze.ui.RootPanel o-- com.example.telecom.paris.maze.ui.ChooserButtonGroup : chooserButtonGroup
  com.example.telecom.paris.maze.ui.RootPanel o-- com.example.telecom.paris.maze.ui.MazePanel : mazePanel
  com.example.telecom.paris.maze.ui.SaveAsMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SaveAsMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.SaveAsMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.SaveMenuItem .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SaveMenuItem -up-|> javax.swing.JMenuItem
  com.example.telecom.paris.maze.ui.SaveMenuItem o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.SolveMazeButton .up.|> java.awt.event.ActionListener
  com.example.telecom.paris.maze.ui.SolveMazeButton -up-|> javax.swing.JButton
  com.example.telecom.paris.maze.ui.SolveMazeButton o-- com.example.telecom.paris.maze.ui.MazeEditor : mazeEditor
  com.example.telecom.paris.maze.ui.WallBoxButton -up-|> com.example.telecom.paris.maze.ui.AbstractBoxTypeRadioButton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
